Name:             orlin
Cabal-Version:    >= 1.10
Build-Type:       Simple
Version:          0.0.1
Maintainer:       robdockins@fastmail.fm
Author:           Robert Dockins
License:          BSD2
License-file:     LICENSE

Library
  Default-language: Haskell2010
  Hs-Source-Dirs: src
  Exposed-Modules:
    Orlin.CmdLine    
    Orlin.Tokens
    Orlin.Lexer
    Orlin.AST
    Orlin.Parser
    Orlin.Compile
    Orlin.Units
    Orlin.Types

  Ghc-options: -W

  Build-depends:
    base >= 4 && < 5,
    array,
    containers,
    transformers,
    mtl,
    Shellac,
    Shellac-haskeline

Executable orlinc
  Default-language: Haskell2010
  Main-Is: Main.hs
  Hs-Source-Dirs: main
  Build-depends:
    base >= 4 && < 5,
    orlin
